# empirical-fire-modelling

./: .pre-commit-config.yaml  .zenodo.json  LICENSE  README.md  requirements.yaml  setup.cfg  setup.py
analysis/: ba_plotting.py  bloo_cv_r2s.ipynb  buffered_leave_one_out.py  calculate_loco_values.py  calculate_pfi.py  calculate_shap_values.py  climatological_model_combinations.py  combined_importances.ipynb  dask_climatological_model_combinations.py  experiments_variables_table.py  get_data.py  matplotlibrc  model_combinations.ipynb  model_fitting.py  model_scores.py  obs_pred_bin.py  obs_pred_comp.py  plot_ale_1d.py  plot_ale_2d.py  plot_clim_mon_ale_comp.py  plot_correlations.py  plot_gfed_regions.ipynb  plot_model_scores.py  plot_multi_ale_1d.py  plot_multi_model_ale.py  plot_normal_ba_peak_distr_max_shap_fapar_dry_days.py  plot_normal_ba_weighted_max_shap_fapar_dry_days.py  prediction_comparison.py  random_search_cv.py  visualise_gini.ipynb  visualise_loco.ipynb  visualise_pfis.ipynb  visualise_random_search_cv.ipynb  visualise_shap.ipynb
analysis/cv_experiments/: leave_out_years.ipynb  random_binary_dilation.py
analysis/data_exploration/: minimum_value_fill_statistics.ipynb
analysis/example/: example.py  example_func.py
tests/: test_cache_checking.py  test_cache_ignore.py  test_cache_roundtrip.py  test_cached_tuples.py  test_custom_cache.py  test_cv.py  test_dependencies.py  test_hash.py  test_hash_only_caching.py  test_lazy_cache_checking.py  test_process_proxy.py  test_repeat_run_dependencies.py  test_signature.py  test_variable.py
tests/utils/: core.py
(+41 files in other folders)
