[metadata]
license_files = LICENSE

[tool:pytest]
addopts =
    -n3
    --benchmark-sort=fullname
    --benchmark-autosave
    --doctest-modules
    --cov=empirical_fire_modelling
    -r a
    -v
    --ignore-glob='joblib/**/func_code.py'
    --ignore='tests/scripts/'

markers =
    slow: mark a test as being very slow.
